style [inicio sesion]: Agregado de estilos para sombras y borde

--- a/src/Componentes/InicioSesion/style.css
+++ b/src/Componentes/InicioSesion/style.css
@@ -1,24 +1,29 @@
 .account-box
 {
     border: 2px solid rgba(153, 153, 153, 0.75);
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -khtml-border-radius: 2px;
-    -o-border-radius: 2px;
+    border-radius: 17px;
+    -moz-border-radius: 17px;
+    -webkit-border-radius: 17px;
+    -khtml-border-radius: 17px;
+    -o-border-radius: 17px;
+    box-shadow: 30px solid;
     z-index: 3;
     font-size: 13px !important;
     font-family: "Helvetica Neue" ,Helvetica,Arial,sans-serif;
     background-color: #ffffff;
     padding: 20px;
+    width: 428px;
+    max-width: 100%;
+    box-shadow: 0px 0px 13px -2px #127dbf
+}
+
+.col-md-3{
+    max-width: none;
 }
 
 .logo
 {
-    width: 138px;
-    height: 30px;
     text-align: center;
-    margin: 10px 0px 27px 40px;
     background-position: 0px -4px;
     position: relative;
 }
@@ -66,4 +71,17 @@
     background-color: #454545;
     color: #fff;
     font-weight:bold;
+}
+
+.caja-logo{
+    margin: 20px auto 20px auto;
+}
+
+.logo_imagen{
+    display: inline-block;
+    width: 200px;
+}
+
+@media screen and (max-width:400px){
+
 }
