--- a/src/Componentes/InicioSesion/style.css
+++ b/src/Componentes/InicioSesion/style.css
@@ -85,3 +85,15 @@
 @media screen and (max-width:400px){
 
 }
+
+.forgotLnk{
+
+    display: flex;
+    justify-content: center;
+}
+
+
+.checkbox{
+    display: flex;
+    justify-content: center;
+}
