style [profile]: modificacion de estilos

--- a/src/Componentes/Profile/style.css
+++ b/src/Componentes/Profile/style.css
@@ -1983,3 +1983,9 @@ p {
 #navbar .navbar {
     margin-bottom: 20px;
 }
+
+.text-center-direction{
+    display: flex !important;
+    flex-direction: column !important;
+    text-align: center;
+}
