--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -22,7 +22,8 @@
     margin-top: 10px;
 }
    
-button{
+.btn-button{
+    border: unset;
     background-color: #5edfff !important;
     border-radius: 10px !important;
     border-color: #5edfff !important;
